# Fractals

./: CMakeLists.txt
kernels/: fractals.cl
src/: fractal.c  fractal.h  headers.h  main.c  openclutils.c  openclutils.h  platform.c  utils.c  utils.h
